book mark color change

--- a/css/sass/home-page.scss
+++ b/css/sass/home-page.scss
@@ -24,7 +24,7 @@ nav{
                         .book-mark{
                             width: 50px;
                             height: 160px;
-                            background-color: red;
+                            background-color: #fe4646;
                             position: absolute;
                             left: 50%;
                             top: 50%;
