--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ nav .container-fluid .navbar-collapse .nav.book-mark-ul .book-mark-div {
 nav .container-fluid .navbar-collapse .nav.book-mark-ul .book-mark-div .book-mark {
   width: 50px;
   height: 160px;
-  background-color: red;
+  background-color: #fe4646;
   position: absolute;
   left: 50%;
   top: 50%;
